[package]
name = "snake-tutorial"
version = "0.1.0"
authors = ["James Gaunt <Jackowacca@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "snake-tutorial"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
max7219 = "0.4.2"
max7219-canvas = "0.1.1"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
const-random = "0.1.17"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
